[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Enemy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Characters/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Audio/Death.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 19 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3, 28 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3, 37 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 3, 46 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4, 10 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4, 19 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4, 28 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 4, 37 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 4, 46 )

[sub_resource type="Animation" id=11]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/path = NodePath("DyingParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnemyBox2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EnemyBox3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("EnemyBox4:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("EnemyBox5:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("EnemySprite:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -35 ), Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("EnemySprite:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("EnemyHitbox/EnemyHitbox:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("EnemyHitbox/EnemyHitbox2:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("EnemyHitbox/EnemyHitbox3:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("EnemyHitbox/EnemyHitbox4:disabled")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("EnemyHitbox/EnemyHitbox5:disabled")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("DeathSound:playing")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=12]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -35 ), Vector2( 0, -30.52 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemySprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.9 ) ]
}

[node name="Enemy" type="StaticBody2D" groups=[
"Enemy",
]]
collision_layer = 8
script = ExtResource( 2 )
colliders = [ NodePath("EnemyBox"), NodePath("EnemyBox2"), NodePath("EnemyBox3"), NodePath("EnemyBox4"), NodePath("EnemyBox5") ]
hitboxes = [ NodePath("EnemyHitbox/EnemyHitbox"), NodePath("EnemyHitbox/EnemyHitbox2"), NodePath("EnemyHitbox/EnemyHitbox3"), NodePath("EnemyHitbox/EnemyHitbox4"), NodePath("EnemyHitbox/EnemyHitbox5") ]

[node name="EnemySprite" type="Sprite" parent="."]
position = Vector2( 0, -35 )
texture = ExtResource( 1 )
flip_h = true
hframes = 5

[node name="EnemyBox" type="CollisionShape2D" parent="."]
visible = false
modulate = Color( 0.0313726, 0, 1, 1 )
shape = SubResource( 1 )
disabled = true

[node name="EnemyBox2" type="CollisionShape2D" parent="."]
visible = false
modulate = Color( 0.0313726, 0, 1, 1 )
position = Vector2( 0, -9 )
shape = SubResource( 2 )
disabled = true

[node name="EnemyBox3" type="CollisionShape2D" parent="."]
visible = false
modulate = Color( 0.0313726, 0, 1, 1 )
position = Vector2( 0, -18 )
shape = SubResource( 3 )
disabled = true

[node name="EnemyBox4" type="CollisionShape2D" parent="."]
visible = false
modulate = Color( 0.0313726, 0, 1, 1 )
position = Vector2( 0, -27 )
shape = SubResource( 4 )
disabled = true

[node name="EnemyBox5" type="CollisionShape2D" parent="."]
visible = false
modulate = Color( 0.0313726, 0, 1, 1 )
position = Vector2( 0, -36 )
shape = SubResource( 5 )
disabled = true

[node name="EnemyHitbox" type="Area2D" parent="." groups=[
"EnemyHitbox",
]]
collision_layer = 8

[node name="EnemyHitbox" type="CollisionShape2D" parent="EnemyHitbox"]
visible = false
modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 6 )
disabled = true

[node name="EnemyHitbox2" type="CollisionShape2D" parent="EnemyHitbox"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, -9 )
shape = SubResource( 7 )
disabled = true

[node name="EnemyHitbox3" type="CollisionShape2D" parent="EnemyHitbox"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, -18 )
shape = SubResource( 8 )
disabled = true

[node name="EnemyHitbox4" type="CollisionShape2D" parent="EnemyHitbox"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, -27 )
shape = SubResource( 9 )
disabled = true

[node name="EnemyHitbox5" type="CollisionShape2D" parent="EnemyHitbox"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, -36 )
shape = SubResource( 10 )
disabled = true

[node name="EnemyAnimator" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 11 )
anims/Idle = SubResource( 12 )

[node name="DyingParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 32
lifetime = 2.0
one_shot = true
speed_scale = 3.0
explosiveness = 0.7
emission_shape = 1
emission_sphere_radius = 6.0
direction = Vector2( 1, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
linear_accel = -46.75
radial_accel = 70.0
angle = 336.6
angle_random = 1.0
scale_amount = 1.5
color = Color( 0.67451, 0.196078, 0.196078, 1 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Enemy"

[connection signal="body_entered" from="EnemyHitbox" to="." method="_on_EnemyHitbox_body_entered"]
[connection signal="animation_finished" from="EnemyAnimator" to="." method="_on_EnemyAnimator_animation_finished"]
